# Crystal_Desktop

./: Cargo.toml  README.md
Compositor/: Cargo.toml
Compositor/src/: debug_screen.rs  main.rs  release_screen.rs
Compositor/src/common/: file.rs  mod.rs  mouse.rs
Compositor/src/math/: mod.rs
Compositor/src/net/: connection_state.rs  error.rs  handle.rs  mod.rs  net_state.rs  packet.rs
Compositor/src/render/: colour.rs  framebuffer.rs  mod.rs  rect.rs  text_renderer.rs
Compositor/src/render/api/: framebuffer.rs  mod.rs  shaderprogram.rs  texture.rs
Compositor/src/render/shaders/: colour.frag  colour.vert  textured.frag  textured.vert  textured_flip.frag
Compositor/src/render/util/: colour.rs  mod.rs  rect.rs
Compositor/src/util/: debug_screen.rs  mod.rs
Compositor/src/util/shaders/: fs.glsl  vs.glsl
Compositor/src/window/: display_manager.rs  mod.rs  window.rs
Fluorite/: Cargo.toml
Fluorite/src/: main.rs
LibCrystalMatrix/: Cargo.toml
LibCrystalMatrix/src/: lib.rs  manager.rs
LibCrystalMatrix/src/common/: mod.rs
LibCrystalMatrix/src/net/: mod.rs  packat.rs
LibProtocal/: Cargo.toml
LibProtocal/src/: lib.rs
usr/local/share/shaders/: colour.frag  share.vert  textured.frag  textured_flip.frag
