[package]
name = "prism"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
libprotocol = { path = "../LibProtocal"}
signal-hook = "0.3.*"
nalgebra = "0.33.*"
evdev = "0.12.*"
gl = "0.14.*"
libloading = "0.8.*"
png = "0.17.*"
# temp
glfw = "*"
thiserror = "1.0.69"
